openwebui/base/openwebui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui-service
  namespace: openwebui
  labels:
    name: openwebui
spec:
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    app: openwebui
  sessionAffinity: None
  type: LoadBalancer
  externalTrafficPolicy: Local
