openwebui/base/openwebui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui-ingress
  namespace: openwebui
  labels:
    name: openwebui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: / # This is needed for openwebui
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "102400m" # This is needed to upload files
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600s"
    nginx.ingress.kubernetes.io/send-timeout: "600s"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - openwebui.echobase.network
      secretName: openwebui-prod-tls
  rules:
    - host: openwebui.echobase.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui-service
                port:
                  number: 8888
